auto_recache false

--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -3,7 +3,7 @@ repo = 'Shougo/dein.vim'
 hook_add = '''
   let g:dein#enable_notification = v:true
   let g:dein#install_progress_type = 'floating'
-  let g:dein#auto_recache = v:true
+  "let g:dein#auto_recache = v:true
 '''
 
 [[plugins]]
