--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -88,7 +88,7 @@ repo = 'Shougo/ddc-around'
 on_source = 'ddc.vim'
 hook_source = '''
   let g:ddc_source_options['around'] = {
-    \   'mark': 'A',
+    \   'mark': ' ',
     \   'matchers': ['matcher_head', 'matcher_length']
     \ }
 '''
@@ -98,7 +98,7 @@ repo = 'Shougo/ddc-nvim-lsp'
 on_source = 'ddc.vim'
 hook_source = '''
   let g:ddc_source_options['nvim-lsp'] = {
-    \   'mark': 'LSP',
+    \   'mark': ' ',
     \   'dup': v:true,
     \   'forceCompletionPattern': '\.\w*|:\w*|->\w*'
     \ }
@@ -109,7 +109,7 @@ repo = 'Shougo/ddc-cmdline'
 on_source = 'ddc.vim'
 hook_source = '''
   let g:ddc_source_options['cmdline'] = {
-    \   'mark': 'cmd',
+    \   'mark': ' ',
     \   'minAutoCompleteLength': 1
     \ }
 '''
@@ -119,7 +119,7 @@ repo = 'Shougo/ddc-cmdline-history'
 on_source = 'ddc.vim'
 hook_source = '''
   let g:ddc_source_options['cmdline-history'] = {
-    \   'mark': 'H',
+    \   'mark': ' ',
     \   'matchers': ['matcher_head', 'matcher_length'],
     \ }
 '''
@@ -139,7 +139,7 @@ on_source = 'ddc.vim'
 depends = 'vim-vsnip'
 hook_source = '''
   let g:ddc_source_options['vsnip'] = {
-    \   'mark': 'S',
+    \   'mark': ' ',
     \   'dup': v:true
     \ }
 
@@ -172,7 +172,7 @@ on_source = 'ddc.vim'
 repo = 'neovim/nvim-lspconfig'
 on_event = 'BufReadPost'
 hook_add = '''
-  autocmd BufWritePre *.ts lua vim.lsp.buf.formatting_sync()
+  autocmd BufWritePre *.ts,*.dart lua vim.lsp.buf.formatting_sync()
 '''
 hook_source = '''
   lua << EOF
@@ -191,8 +191,12 @@ hook_source = '''
   })
   local nvim_lsp = require('lspconfig')
   nvim_lsp.clangd.setup{on_attach = on_attach}
-  nvim_lsp.dartls.setup{on_attach = on_attach}
   nvim_lsp.vimls.setup{on_attach = on_attach}
+  nvim_lsp.dartls.setup{
+    on_attach = on_attach,
+    -- single_file_support = true
+    root_dir = require('lspconfig.util').root_pattern("pubspec.yaml", ".dart")
+  }
   nvim_lsp.denols.setup{
     on_attach = on_attach,
     init_options = {
