--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -69,10 +69,10 @@ ddu-ff = '''
   nnoremap <buffer><ESC> <Cmd>call ddu#ui#ff#do_action('quit')<CR>
 '''
 ddu-ff-filter = '''
-  inoremap <buffer><CR>  <Cmd>call ddu#ui#ff#do_action('itemAction')<CR>
+  inoremap <buffer><CR>  <Cmd>call ddu#ui#ff#do_action('itemAction', { 'params': {'command': 'drop'} })<CR>
+  inoremap <buffer><C-o> <Cmd>call ddu#ui#ff#do_action('itemAction', { 'params': {'command': 'tab drop'} })<CR>
   inoremap <buffer><C-n> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')+1,0)")<CR>
   inoremap <buffer><C-p> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')-1,0)")<CR>
-  inoremap <buffer><C-o> <Cmd>call ddu#ui#ff#do_action('itemAction', {'params' : {'command': 'tabnew'}})<CR>
   inoremap <buffer><C-q> <Cmd>call ddu#ui#ff#do_action('preview')<CR>
   inoremap <buffer><ESC> <Cmd>call ddu#ui#ff#do_action('quit')<CR>
 '''
@@ -84,6 +84,7 @@ on_source = 'ddu.vim'
 
 [[plugins]]
 repo = 'shun/ddu-source-rg'
+depends = 'ddu-kind-file'
 on_source = 'ddu.vim'
 hook_source = '''
   let g:ddu_source_option['rg'] = { 'matchers': [] }
