update mouse behavior

--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -1,6 +1,8 @@
+# マウスを有効化
+set -g mouse on
+
 # 履歴を長く(バックスクロール行数)
 set -g history-limit 100000
-
 # ウィンドウとペインの番号を 1 から開始
 set -g base-index 1
 set -g pane-base-index 1
