--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -1,9 +1,11 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 hook_add = '''
-  let g:dein#enable_notification = v:true
-  let g:dein#install_progress_type = 'floating'
-  "let g:dein#auto_recache = v:true
+let s:github_pat = expand('~/dotfiles/vim/github_parsonal_access_token.txt')
+if filereadable(s:github_pat)
+  let g:dein#install_github_api_token = readfile(s:github_pat)[0]
+  command! UpdatePlugin call dein#check_update(v:true)
+endif
 '''
 
 [[plugins]]
