--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -10,6 +10,9 @@ endif
 
 [[plugins]]
 repo = 'vim-denops/denops.vim'
+hook_add = '''
+  let g:denops_server_addr = '127.0.0.1:32123'
+'''
 
 [[plugins]]
 repo = 'ryanoasis/vim-devicons'
