--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -53,6 +53,52 @@ on_source = '''
 '''
 
 [[plugins]]
+repo = 'cohama/lexima.vim'
+on_event = 'InsertEnter'
+hook_add = '''
+  let g:lexima_no_default_rules = 1
+  let g:lexima_enable_basic_rules = 0
+  let g:lexima_enable_endwise_rules = 0
+  let g:lexima_enable_space_rules = 0
+  let g:lexima_map_escape = ''
+  let g:lexima_accept_pum_with_enter = 1 " don't work with pum.vim
+  autocmd FileType defx,ddu-ui-filer let b:lexima_disabled = 1
+  let g:lexima_custom = [
+    \   { 'char': '(', 'input_after': ')' },
+    \   { 'char': '[', 'input_after': ']' },
+    \   { 'char': '{', 'input_after': '}' },
+    \   { 'char': '"', 'input_after': '"' },
+    \   { 'char': "'", 'input_after': "'" },
+    \   { 'char': "`", 'input_after': "`" },
+    \   { 'char': '(', 'at': '\\\%#' },
+    \   { 'char': '[', 'at': '\\\%#' },
+    \   { 'char': '{', 'at': '\\\%#' },
+    \   { 'char': '"', 'at': '\\\%#' },
+    \   { 'char': "'", 'at': '\\\%#' },
+    \   { 'char': "`", 'at': '\\\%#' },
+    \   { 'char': '<BS>', 'at': '(\%#)',   'delete': 1 },
+    \   { 'char': '<BS>', 'at': '\[\%#\]', 'delete': 1 },
+    \   { 'char': '<BS>', 'at': '{\%#}',   'delete': 1 },
+    \   { 'char': '<BS>', 'at': '"\%#"',   'delete': 1 },
+    \   { 'char': '<BS>', 'at': "'\%#'",   'delete': 1 },
+    \   { 'char': '<BS>', 'at': '"\%#`',   'delete': 1 },
+    \ ]
+    "\   { 'char': '<CR>', 'at': '{\%#}', 'input_after': '<CR>' },
+    "\   { 'char': '<CR>', 'at': '(\%#)', 'input_after': '<CR>' },
+  let g:lexi_custom_ft = []
+'''
+hook_source = '''
+  call lexima#clear_rules()
+  for rule in g:lexima_custom
+      call lexima#add_rule(rule)
+  endfor
+  for rule in g:lexima_custom_ft
+      call lexima#add_rule(rule)
+  endfor
+'''
+
+
+[[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter'
 on_event = 'BufRead'
 hook_post_update = 'TSUpdate'
