--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -219,8 +219,11 @@ hook_source = '''
   }
   local capabilities = vim.lsp.protocol.make_client_capabilities()
   capabilities.textDocument.completion.completionItem.snippetSupport = true
-  nvim_lsp.cssls.setup {
+  nvim_lsp.cssls.setup{
     capabilities = capabilities,
+  }
+  nvim_lsp.rust_analyzer.setup{
+    on_attach = on_attach,
   }
   nvim_lsp.jsonls.setup{}
   nvim_lsp.omnisharp.setup{}
