--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -15,12 +15,12 @@ hook_add = '''
   nnoremap : <Cmd>call <SID>CommandlinePre()<CR>:
 
   function! s:CommandlinePre() abort
-    cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
-    cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <expr><CR>   pum#visible() && pum#complete_info(['selected']) != {'selected': -1} ? '<Cmd>call pum#map#confirm()<CR>' : '<CR>'
+    cnoremap <expr><Tab>  pum#visible() ? pum#map#insert_relative(+1) : ddc#manual_complete()
+    cnoremap <expr><C-n>  pum#visible() ? pum#map#select_relative(+1) : '<Down>'
+    cnoremap <expr><C-p>  pum#visible() ? pum#map#select_relative(-1) : '<Up>'
+    cnoremap <expr><Down> pum#visible() ? pum#map#select_relative(+1) : '<Down>'
+    cnoremap <expr><Up>   pum#visible() ? pum#map#select_relative(-1) : '<Up>'
+    cnoremap <expr><CR>   pum#visible() && pum#complete_info(['selected']) != {'selected': -1} ? pum#map#confirm() : '<CR>'
 
     autocmd User DDCCmdlineLeave ++once call s:CommandlinePost()
     autocmd InsertEnter <buffer> ++once call s:CommandlinePost()
@@ -73,18 +73,6 @@ hook_source = '''
     \ )
 
   call ddc#enable()
-'''
-
-[[plugins]]
-repo = 'Shougo/pum.vim'
-on_source = 'ddc.vim'
-hook_add = '''
-  inoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Cmd>normal! gj<CR>'
-  inoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Cmd>normal! gk<CR>'
-  inoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Cmd>normal! gj<CR>'
-  inoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Cmd>normal! gk<CR>'
-  inoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
-  set completeopt=menuone,noinsert
 '''
 
 [[plugins]]
